[project]
name = "media-proxy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "]", email = "amase.cocoa@gmail.com"},
]
dependencies = [
    "aiohttp>=3.10.5",
    "aiofiles>=24.1.0",
    "aiohttp-cache>=4.0.1",
    "redis[hiredis]>=4.6.0",
    "aiosonic>=0.21.0",
    "pyvips>=2.2.3",
    "aiodns>=3.2.0",
    "pkgconfig>=1.5.5",
    "pyyaml>=6.0.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

# docker build -t amasecocoa/media-proxy:0.3.1 -t amasecocoa/media-proxy:latest -t amasecocoa/media-proxy:0.0.0 .
# docker run -d --name media-proxy -p 3003:3003 amasecocoa/media-proxy:latest